Change footer position to "fixed" and add line-height to prevent overlap

--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -3,7 +3,7 @@ footer {
   height: 60px;
   width: 100%;
   text-align: center;
-  padding-top: 45px;
-  position: absolute;
+  position: fixed;
+  line-height: 60px;
   bottom: 0;
 }
